--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -42,8 +42,9 @@ body {
   font-weight: bold;
   font-size: 16;
 }
-.menu-text {
-  color: rgb(219, 219, 10);
+
+#menu-text {
+  color: yellow;
   font-family: "Pacifico", cursive;
   font-weight: bolder;
   font-style: normal;
@@ -55,6 +56,8 @@ body {
 }
 
 .profile-container {
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
   height: 80%;
   width: 80%;
   margin: 2% auto;
@@ -64,9 +67,20 @@ body {
   align-items: center;
   padding: 2%;
   background-color: whitesmoke;
-  border: solid black 1px;
+  border: solid black 2px;
   border-radius: 5px;
   box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.5);
+}
+
+.description-text-box {
+  padding-right: 5rem;
+  padding-left: 5rem;
+}
+
+@media (max-width: 640px) {
+  .description-text-box {
+    padding: 0%;
+  }
 }
 .profile-pic {
   width: 18rem; /* Set a specific width */
